--- a/producto/templates/base.html
+++ b/producto/templates/base.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
             <a class="navbar-brand" href="">
                 <img src="{% static 'img/Logo.PNG' %}" alt="Logo" width="30" height="30"
-                    class="d-inline-block align-top">
+                    class="d-inline-block align-top"> Michelle's Bakery
             </a>
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -43,15 +43,69 @@
         </nav>
     </header>
     <main>
-        {% block contenido %} {% endblock %}
+        
     </main>
     <footer>
-
+        {% block contenido %} {% endblock %}
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        {% block js %}
+    <script>
+        function confirmarEliminar(id) {
+    
+          
+    const swalWithBootstrapButtons = Swal.mixin({
+        customClass: {
+          confirmButton: 'btn btn-success',
+          cancelButton: 'btn btn-danger'
+        },
+        
+      })
+      
+      swalWithBootstrapButtons.fire({
+        title: '¿Deseas Eliminar el Producto?',
+        text: "¡Esta opcion no es reversible!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Si, eliminar!',
+        cancelButtonText: 'No, cancelar!',
+        confirmButtonColor: '#e30052',
+        reverseButtons: true
+        
+      }).then((result) => {
+        if (result.isConfirmed) {
+     
+            window.location.href = "eliminar/" + id
+          
+        } else if (
+          /* Read more about handling dismissals below */
+          result.dismiss === Swal.DismissReason.cancel
+        ) {
+          swalWithBootstrapButtons.fire(
+            'Cancelado',
+            'El contenido se mantiene.',
+            'error'
+          )
+        }
+      })
+        }
+    </script>
+    {% endblock %}
+        {% if messages %}
+          {% for m in messages %}
+            <script>
+              Swal.fire({
+                "title": "Confirmación",
+                "text": "{{m}}",
+                "icon": "success"
+              })
+            </script>
+          {% endfor %}
+        {% endif  %}
 </body>
 
 </html>
