--- a/producto/templates/Producto/crear.html
+++ b/producto/templates/Producto/crear.html
@@ -9,7 +9,7 @@
         <div class="card w-50 mt-4">
           <div class="card-header">
             <h4 class="card-title"><b>Crear Producto</b></h4>
-            <p>Nota: El formato de fecha es año-mes-dia</p>
+            <p><span style="background-color: #FFCCCC;">Importante. El formato de fecha es año-mes-dia</span></p>
           </div>
           <div class="card-body">{% include 'producto/form.html' %}</div>
           <div class="card-footer text-muted">
