--- a/producto/templates/Producto/editar.html
+++ b/producto/templates/Producto/editar.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% block titulo%} <title>Editar Producto</title> {%
-endblock %} {% block contenido %}
+{% extends "base.html" %} {% block titulo%} <title>Editar Producto</title> 
+{%endblock %} {% block contenido %}
 
 <div class="container">
   <div class="row">
@@ -8,7 +8,7 @@ endblock %} {% block contenido %}
         <div class="card w-50 mt-4">
           <div class="card-header">
             <h4 class="card-title"><b>Editar Producto</b></h4>
-            <p>Nota: El formato de fecha es año-mes-dia</p>
+            <p><span style="background-color: #FFCCCC;">Importante. El formato de fecha es año-mes-dia</span></p>
           </div>
           <div class="card-body">{% include 'producto/form.html' %}</div>
           <div class="card-footer text-muted">
