--- a/producto/templates/pages/inicio.html
+++ b/producto/templates/pages/inicio.html
@@ -13,7 +13,7 @@
         <div class="col-lg-12 text-center">
             <h1><b><i>Bienvenidos a Michelle's Bakery</i></b></h1>
             <hr>
-            <img src="{% static 'img/MB.jpeg' %}" class="img-fluid" alt="Imagen promocional de la pastelería">
+            <img src="{% static 'img/Inicio.jpeg' %}" class="img-fluid" alt="Imagen promocional de la pastelería">
         </div>
     </div>
 </div>
